# Gaffer

./: .env.example  .gitignore  CLAUDE.md  GAFFER_PLAN.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  llm.py  main.py
backend/app/agent/: __init__.py  graph.py  grounding.py  rag.py  schemas.py  tools.py
backend/app/data/: __init__.py  ingest.py  store.py
backend/app/viz/: __init__.py  pitch.py
backend/scripts/: ask.py  gen_shotmap.py  test_grounding.py  test_shot_map.py  test_slugify.py  verify_top_scorers.py
design_ref/: .thumbnail  Gaffer.dc.html
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  data.ts  index.css  shotmap.generated.json
frontend/src/components/: AnalysisCanvas.tsx  ChatRail.tsx  Header.tsx  MiniShotMap.tsx  Pitch.tsx
tactics_kb/: README.md  high_press.md  low_block.md  overload.md  pass_network.md  xg.md
