[project]
name = "gaffer-backend"
version = "0.1.0"
description = "Gaffer backend — conversational football analyst over StatsBomb data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "duckdb>=1.5.4",
    "fastapi>=0.138.2",
    "langgraph>=1.2.7",
    "litellm>=1.90.1",
    "mplsoccer>=1.6.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.6.0",
    "statsbombpy>=1.20.0",
    "uvicorn[standard]>=0.49.0",
]
